--- a/public/index.css
+++ b/public/index.css
@@ -298,10 +298,18 @@ main {
 
 
 
-.image > img {
-	content: url('./images/arycolouredited.jpg');
-	width: 80%;
+.image {
+	align-items: center;
+	display: flex;
+	margin-left: 20px;
+	background-image: url('./images/arycolouredited.jpg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+    width: 20vw;
+    height: 30vh;
 }
+
 
 
 #profile,#skills {
@@ -322,6 +330,7 @@ main {
 		position: relative;
 
 }
+
 
 
 
