--- a/public/phone.css
+++ b/public/phone.css
@@ -52,7 +52,6 @@
 }
 
 #hoverToProfile {
-		border: 2px solid white;
 		bottom: 10vh;
 			backface-visibility: hidden;
 
@@ -65,11 +64,10 @@
 
 	#basicInfo {
 		display: grid;
-		grid-template-rows: 20vh 45vh 6vh;
-		grid-gap: 2vh;
+		grid-template-rows: 20vh 50vh;
 		grid-template-columns: 60vw;
 		justify-content: center;
-		margin-top: 5vh;
+		margin-top: 10vh;
 	}
 	.text {
 		padding: 0px;
@@ -79,6 +77,7 @@
 		flex-direction: column;
 	}
 
+	
 	.image, .text>h2 {
 		margin-left: auto;
 		margin-right:auto;
@@ -92,10 +91,6 @@
 
 	
 
-	.image> img {
-		width: 20vw;
-		height:20vh;
-	}
 
 	.smokeul li {
 		border-radius: 50%;
