--- a/public/phone.css
+++ b/public/phone.css
@@ -11,22 +11,31 @@
             position: relative;
             overflow: auto;
 
-            justify-content: flex-start;
 
 }
 
-	.profile {
-		display: grid;
-		grid-template-rows: 85vh;
-		grid-template-columns: 60vw;
-		align-items: flex-start;
-		/* overflow: auto; */
-    }
+#front {
+	position: relative;
+}
+
 	
-	#contactInfo,#front {
-			width: 85vw;
-    height: 90vh;
+	#contactInfo {
+			width: 90%;
+	height: 75vh;
+	position: absolute;
+	top:0%;
+	left: 5%;
+			margin-top: 10vh;
+			backface-visibility: hidden;
+			transition: transform 0.6s linear;
+			overflow: hidden;
+			transform: perspective(600px) rotateY(180deg);
+		
+
+	
 	}
+
+	
     #contents1,
 #contents2 {
 	width: 85vw;
@@ -41,40 +50,35 @@
 }
 
 
-#hoverContactInfo {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 90%;
-	flex-direction: row;
-	border: 2px solid white;
-	backface-visibility: hidden;
-}
-
-#hoverToProfile {
-		bottom: 10vh;
-			backface-visibility: hidden;
-
-
-}
-	
-#hoverContactInfo > span, #hoverToProfile > span  {
-	color : #ffffcc;
-}
 
 	#basicInfo {
 		display: grid;
-		grid-template-rows: 20vh 50vh;
-		grid-template-columns: 60vw;
+		grid-template-rows: 20vh 60vh;
+		width: 90%;
+		height: 75vh;
 		justify-content: center;
 		margin-top: 10vh;
+		position: absolute;
+		top:0%;
+		left: 5%;
+		grid-gap: 0.5vh;
+		backface-visibility: hidden;
+			transition: transform 0.6s linear;
+			overflow: hidden;
+			transform: perspective(600px) rotateY(0deg);
+		
 	}
 	.text {
-		padding: 0px;
+		padding: 10px;
 		font-size: 25px;
 		display: flex;
 		justify-content: center;
 		flex-direction: column;
+	}
+
+	.image {
+		width: 40vw;
+		height: 30vh;
 	}
 
 	
@@ -140,20 +144,18 @@
         margin-top: 0.5em;
 	}
 	
-	.profile {
-		height: 85vh;
-		width: 85vw;
-	}
+	
+	
 
-		#contents1:hover  #front {
+			#front:hover > #basicInfo {
 						transform: perspective(600px) rotateY(-180deg);
 
 		}	
 
-			#contents1:hover  #contactInfo {
+			#front:hover > #contactInfo {
 						transform: perspective(600px) rotateY(0deg);
 
-		} 
+		}
     
 
 	/*############################# */
@@ -308,6 +310,10 @@ ul {
 	list-style-type: circle;
 }
 
+#content {
+	width: 100%;
+}
+
 #contents ul li {
 	font-size: 0.8em;
 }
@@ -317,7 +323,12 @@ ul {
 		padding:0;
 	}
 
+	.text > h2 {
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
 
+	}
 
 	h2 {
 		font-size: 1.2em;
