--- a/public/index.css
+++ b/public/index.css
@@ -6,8 +6,7 @@ body,
 html {
 	height: 99.9%;
 	margin: 0;
-    padding: 0;
-    
+	padding: 0;
 }
 
 @font-face {
@@ -35,7 +34,7 @@ main {
 }
 
 #scenery {
-	background-image: url('./images/mainsignboard.jpg');
+	background-image: url('./images/Optimised/mainsignboard.webp');
 	background-position: left top;
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
@@ -47,7 +46,6 @@ main {
 	position: absolute;
 	bottom: 0vh;
 	left: 200px;
-	/* transform: translateX(-50%); */
 	margin: 0;
 	padding: 0;
 }
@@ -63,21 +61,21 @@ main {
 .smokeul li:nth-child(even) {
 	animation: animEven 2.8s linear infinite;
 	-webkit-animation: animEven 2.8s linear infinite;
-    -moz-animation: animEven 2.8s linear infinite;
+	-moz-animation: animEven 2.8s linear infinite;
 	-o-animation: animEven 2.8s linear infinite;
 }
 
 .smokeul li:nth-child(odd) {
 	animation: animOdd 2.8s linear infinite;
 	-webkit-animation: animOdd 2.8s linear infinite;
-    -moz-animation: animOdd 2.8s linear infinite;
+	-moz-animation: animOdd 2.8s linear infinite;
 	-o-animation: animOdd 2.8s linear infinite;
 }
 
 .smokeul li:nth-child(9) {
-		animation: none;
+	animation: none;
 	-webkit-animation: none;
-    -moz-animation: none;
+	-moz-animation: none;
 	-o-animation: none;
 	filter: blur(15px);
 }
@@ -177,23 +175,21 @@ main {
 #bikeImg {
 	position: absolute;
 	bottom: -40vh;
-	background-image: url('./images/bikewithoutwheel.png');
+	background-image: url('./images/Optimised/bikewithoutwheel.webp');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	background-position: center;
 	z-index: 1;
-	/* border: 3px solid black; */
 }
 
 @-webkit-keyframes slide1 {
 	0% {
-		-webkit-transform:  translate3d(0, 0, 0);
+		-webkit-transform: translate3d(0, 0, 0);
 	}
 
 	100% {
-		-webkit-transform:  translate3d(-460vw, 0, 0);
+		-webkit-transform: translate3d(-460vw, 0, 0);
 	}
-
 }
 
 @keyframes slide1 {
@@ -206,17 +202,14 @@ main {
 	}
 }
 
-
-
 #road {
-	background-image: url('./images/road.png');
+	background-image: url('./images/Optimised/road.webp');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	background-position: center;
 	height: 25vh;
 	bottom: 0vh;
 	position: relative;
-	/* border: 2px solid black; */
 }
 
 #bwheel {
@@ -224,7 +217,7 @@ main {
 	bottom: 20vh;
 	float: left;
 	object-fit: 100% 100%;
-	background-image: url('./images/unnamed.png');
+	background-image: url('./images/Optimised/unnamed.webp');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	background-position: center;
@@ -234,18 +227,15 @@ main {
 	position: absolute;
 	bottom: 20vh;
 	object-fit: 100% 100%;
-	background-image: url('./images/unnamed.png');
+	background-image: url('./images/Optimised/unnamed.webp');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	background-position: center;
 }
 
-
-
 #banner {
-	content: url('./images/poles.png')
+	content: url('./images/Optimised/poles.webp');
 }
-
 
 /* &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&  */
 #resume {
@@ -255,49 +245,43 @@ main {
 	grid-template-rows: repeat(4, 140vh);
 	overflow: auto;
 	animation: slide1 4s linear forwards;
-		-webkit-animation: slide1 4s linear forwards;
-    -moz-animation: slide1 4s linear forwards;
+	-webkit-animation: slide1 4s linear forwards;
+	-moz-animation: slide1 4s linear forwards;
 	-o-animation: slide1 4s linear forwards;
 }
 
+th {
+	border: 2px solid #ffffcc;
+	height: 7vh;
+	color: #ffffcc;
+	font-size: 25px;
+}
 
- th {
-		border: 2px solid #ffffcc;
-		height: 7vh;
-		color: #ffffcc;
-		font-size: 25px;
-	}
+th:nth-of-type(1) {
+	width: 10vw;
+}
+th:nth-of-type(2) {
+	width: 45vw;
+}
 
-	th:nth-of-type(1) {
-				width: 10vw;
+td {
+	width: 20vw;
+	color: #ffffcc;
+	font-size: 20px;
+	height: 10vh;
+	border: 2px solid #ffffcc;
+	text-align: center;
+	cursor: pointer;
+}
 
-	}
-		th:nth-of-type(2) {
-		width: 45vw;
-	}
+td a {
+	color: #ffffcc;
+	font-size: 20px;
+}
 
-	td {
-		width: 20vw;
-		color: #ffffcc;
-		font-size: 20px;
-		height: 10vh;
-	    border: 2px solid #ffffcc;
-		text-align: center;
-		cursor: pointer;
-	}
-
-	td a {
-		color: #ffffcc;
-		font-size: 20px;
-
-	}
-
-	td a:hover {
-		color: pink;
-	}
-
-
-
+td a:hover {
+	color: pink;
+}
 
 .image {
 	justify-content: center;
@@ -309,14 +293,13 @@ main {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
-    width: 20vw;
-    height: 30vh;
+	width: 20vw;
+	height: 30vh;
 }
 
-
-
-#profile,#skills {
-	background-image: url('./images/orangeBG.png');
+#profile,
+#skills {
+	background-image: url('./images/Optimised/orangeBG.webp');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -324,28 +307,14 @@ main {
 	justify-content: flex-end;
 	align-items: center;
 	padding: 20px;
-	
 }
-
-
-
-/* #contents1 {
-		position: relative;
-
-} */
-
-
-
 
 .profile {
-				display: flex;
+	display: flex;
 	justify-content: center;
-		width: 60%;
-			height: 100vh;
-
+	width: 60%;
+	height: 100vh;
 }
-
-
 
 #front h1 {
 	width: 18vw;
@@ -356,7 +325,6 @@ main {
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
-
 }
 
 h2 {
@@ -371,9 +339,9 @@ h3,
 h4 {
 	font-family: 'caviardreams';
 	font-weight: bolder;
-    color: rgb(255, 68, 93);
-    letter-spacing: 1px;
-    word-spacing: 1.5px;
+	color: rgb(255, 68, 93);
+	letter-spacing: 1px;
+	word-spacing: 1.5px;
 }
 li,
 p {
@@ -381,11 +349,9 @@ p {
 	font-size: 20px;
 	font-weight: bold;
 	line-height: 28px;
-    color: #ffffcc;
-        letter-spacing: 1px;
-
-        word-spacing: 1.5px;
-
+	color: #ffffcc;
+	letter-spacing: 1px;
+	word-spacing: 1.5px;
 }
 h3 {
 	font-weight: bold;
@@ -420,9 +386,8 @@ h1 {
 
 .text > h2 {
 	width: 40%;
-		margin-left: auto;
+	margin-left: auto;
 	margin-right: auto;
-
 }
 
 #basicInfo > p {
@@ -435,7 +400,7 @@ p #email {
 
 #experience,
 #education {
-	background-image: url('./images/nightBG.png');
+	background-image: url('./images/Optimised/nightBG.webp');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -453,8 +418,6 @@ p #email {
 	overflow: auto;
 }
 
-
-
 #contents1,
 #contents2 {
 	width: 74vw;
@@ -468,8 +431,8 @@ p #email {
 	justify-content: flex-start;
 	align-items: center;
 	margin-right: 20px;
-		margin-top: auto;
-	margin-bottom:auto;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 #contents1 {
@@ -483,21 +446,19 @@ p #email {
 	padding: 20px;
 }
 
-	#front{
-			width: 74vw;
-			height: 120vh;
-			position: relative;
-		} 
+#front {
+	width: 74vw;
+	height: 120vh;
+	position: relative;
+}
 
-
-		
 #basicInfo {
 	display: grid;
 	grid-template-rows: 30vh 50vh;
 	height: 100vh;
-	position: absolute;	
+	position: absolute;
 	top: 0%;
-    left: 20%;
+	left: 20%;
 	grid-gap: 5vh;
 	justify-content: center;
 	align-items: center;
@@ -507,53 +468,50 @@ p #email {
 	transition: transform 0.6s linear;
 	overflow: hidden;
 	transform: perspective(600px) rotateY(0deg);
-
 }
-	
-		#contactInfo {
-			width: 60%;
-			height: 100vh;
-			background-image: url('./images/nightBG.png');
-			position: absolute;	
-			top: 0%;
-			left: 20%;
-			margin-top: 15vh;
-			backface-visibility: hidden;
-			transition: transform 0.6s linear;
-			overflow: hidden;
-			transform: perspective(600px) rotateY(180deg);
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-			opacity: 0.8;
-			border-radius: 20px;
-		}
-		#content {
-			background-color: #000033;
-			width: 80%;
-			height: 200px;
-			text-align: center;
-			color: #ffffcc;
-			opacity: 1;
-			border: 2px solid black;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-			border-radius: 20px;
-			border: 2px solid white;
-		}
 
-			#front:hover > #basicInfo {
-						transform: perspective(600px) rotateY(-180deg);
+#contactInfo {
+	width: 60%;
+	height: 100vh;
+	background-image: url('./images/Optimised/nightBG.webp');
+	position: absolute;
+	top: 0%;
+	left: 20%;
+	margin-top: 15vh;
+	backface-visibility: hidden;
+	transition: transform 0.6s linear;
+	overflow: hidden;
+	transform: perspective(600px) rotateY(180deg);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	opacity: 0.8;
+	border-radius: 20px;
+}
+#content {
+	background-color: #000033;
+	width: 80%;
+	height: 200px;
+	text-align: center;
+	color: #ffffcc;
+	opacity: 1;
+	border: 2px solid black;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	border-radius: 20px;
+	border: 2px solid white;
+}
 
-		}	
+#front:hover > #basicInfo {
+	transform: perspective(600px) rotateY(-180deg);
+}
 
-			#front:hover > #contactInfo {
-						transform: perspective(600px) rotateY(0deg);
-
-		}
+#front:hover > #contactInfo {
+	transform: perspective(600px) rotateY(0deg);
+}
 
 #contents1 ol {
 	overflow: auto;
@@ -589,20 +547,9 @@ h1 {
 	margin-right: auto;
 }
 
-
-/* @keyframes example {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
-} */
-
 .workExp {
 	margin-top: auto;
-	margin-bottom:auto;
-	/* border: 2px solid white; */
+	margin-bottom: auto;
 	width: 74vw;
 	opacity: 0.8;
 	border-radius: 20px;
@@ -610,17 +557,17 @@ h1 {
 	padding: 0;
 	margin-right: 20px;
 	overflow: hidden;
-    height: 120vh;
+	height: 120vh;
 	position: relative;
 }
 
 #staticHeader {
-    position: absolute;
-    top: 0;
-    left: 0vw;
+	position: absolute;
+	top: 0;
+	left: 0vw;
 	z-index: 1;
 	height: 120vh;
-	width:74vw;
+	width: 74vw;
 }
 
 #title {
@@ -634,59 +581,36 @@ h1 {
 	grid-template-rows: 6vh 90vh 6vh;
 	width: 74vw;
 	margin-top: 5vh;
-
-	
 }
 
-#Prev,#Next {
+#Prev,
+#Next {
 	color: #ffffcc;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	font: 20px bolder;
-
 }
-#Prev button, #Next button{
-    width: 10vw;
-}
-
-#Next button, #Prev button {
-    /* z-index: 1; */
+#Prev button,
+#Next button {
+	width: 10vw;
 }
 
 #weContent {
-    /* z-index:-1; */
 	padding: 0px;
 	overflow: hidden;
 	display: grid;
-    grid-template-columns: repeat(8, 74vw);
-    height:85vh;
+	grid-template-columns: repeat(8, 74vw);
+	height: 85vh;
 	width: 592vw;
-	/* grid-gap: 10vw; */
 	position: relative;
 	margin-top: 22vh;
-		                /* border: 2px solid red; */
-
-	/* margin-left: 5vw; */
-		/* border: 2px solid magenta; */
-
-
 }
-
-
-/* .workExp2 {
-	display: grid;
-	grid-template-rows: 12vh 50vh;
-    width: 74vw;
-	position: relative;
-} */
-
-
 
 #stopAnimHere {
 	display: flex;
 	flex-direction: column;
-	align-items:center;
+	align-items: center;
 }
 #Comp1,
 #Comp2,
@@ -698,11 +622,7 @@ h1 {
 #Comp8 {
 	position: relative;
 	border-radius: 20px;
-		/* display: flex;
-	flex-direction: column;
-	align-items:center;	 */
 	z-index: 1;
-	/* border: 2px solid white; */
 	padding: 20px;
 }
 
@@ -713,6 +633,3 @@ h1 {
 	align-items: center;
 	font: 20px bolder;
 }
-
-
-
