--- a/public/index.css
+++ b/public/index.css
@@ -9,15 +9,6 @@ html {
 	padding: 0;
 }
 
-@font-face {
-	font-family: '8515oem';
-	src: url('./fonts/Dotf1.woff') format('woff'), url('./fonts/Dotf1.woff2') format('woff2');
-}
-
-@font-face {
-	font-family: 'caviardreams';
-	src: url('./fonts/CaviarDreams.ttf') format('truetype');
-}
 
 main {
 	height: 99.9%;
@@ -39,45 +30,6 @@ main {
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	position: relative;
-}
-
-.smokeul {
-	list-style-type: none;
-	position: absolute;
-	bottom: 0vh;
-	left: 200px;
-	margin: 0;
-	padding: 0;
-}
-
-.smokeul li {
-	position: absolute;
-	border-radius: 5vw;
-	width: 5.34vw;
-	height: 10.68vh;
-	background: #262626;
-}
-
-.smokeul li:nth-child(even) {
-	animation: animEven 2.8s linear infinite;
-	-webkit-animation: animEven 2.8s linear infinite;
-	-moz-animation: animEven 2.8s linear infinite;
-	-o-animation: animEven 2.8s linear infinite;
-}
-
-.smokeul li:nth-child(odd) {
-	animation: animOdd 2.8s linear infinite;
-	-webkit-animation: animOdd 2.8s linear infinite;
-	-moz-animation: animOdd 2.8s linear infinite;
-	-o-animation: animOdd 2.8s linear infinite;
-}
-
-.smokeul li:nth-child(9) {
-	animation: none;
-	-webkit-animation: none;
-	-moz-animation: none;
-	-o-animation: none;
-	filter: blur(15px);
 }
 
 @-webkit-keyframes animEven {
@@ -136,41 +88,6 @@ main {
 	}
 }
 
-.smokeul li:nth-child(1) {
-	animation-delay: 0.2s;
-}
-
-.smokeul li:nth-child(2) {
-	animation-delay: 0.4s;
-}
-
-.smokeul li:nth-child(3) {
-	animation-delay: 0.8s;
-}
-
-.smokeul li:nth-child(4) {
-	animation-delay: 1.2s;
-}
-
-.smokeul li:nth-child(5) {
-	animation-delay: 1.6s;
-}
-
-.smokeul li:nth-child(6) {
-	animation-delay: 2s;
-}
-
-.smokeul li:nth-child(7) {
-	animation-delay: 2.4s;
-}
-
-.smokeul li:nth-child(8) {
-	animation-delay: 2.8s;
-}
-
-.smokeul li:nth-child(9) {
-	animation-delay: 3.2s;
-}
 
 #bikeImg {
 	position: absolute;
@@ -278,10 +195,10 @@ td a {
 	color: #ffffcc;
 	font-size: 20px;
 }
-
+/* 
 td a:hover {
 	color: pink;
-}
+} */
 
 .image {
 	justify-content: center;
@@ -307,13 +224,6 @@ td a:hover {
 	justify-content: flex-end;
 	align-items: center;
 	padding: 20px;
-}
-
-.profile {
-	display: flex;
-	justify-content: center;
-	width: 60%;
-	height: 100vh;
 }
 
 #front h1 {
@@ -364,21 +274,6 @@ h1 {
 	margin: 0%;
 }
 
-#profileStatement {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	background-color: #331300;
-	border-radius: 20px;
-	overflow: auto;
-	padding: 20px;
-	text-align: center;
-}
-
-#profileStatement {
-	text-align: left;
-}
 
 #basicInfo h3 {
 	font-size: 1em;
@@ -394,9 +289,8 @@ h1 {
 	font-size: 0.8em;
 }
 
-p #email {
-	text-transform: lowercase;
-}
+
+
 
 #experience,
 #education {
@@ -517,13 +411,6 @@ p #email {
 	overflow: auto;
 }
 
-#contents2 h2 {
-	border-bottom: 3px double #ffffcc;
-}
-
-#contents2 h3 {
-	border-bottom: 1px solid #ffffcc;
-}
 
 h1 {
 	font-family: '8514oem';
