--- a/public/phone.css
+++ b/public/phone.css
@@ -9,6 +9,7 @@
 	grid-template-rows: repeat(4, auto);
 	position: relative;
 	overflow: auto;
+	border: 2px solid red;
 }
 
 #front {
@@ -80,11 +81,7 @@
 	font-size: 0.6em;
 }
 
-.smokeul li {
-	border-radius: 50%;
-	width: 8vw;
-	height: 4vh;
-}
+
 
 #profile,
 #experience {
@@ -104,15 +101,12 @@
 	margin-right: auto;
 }
 
-#eduDetails,
-#profileStatement {
+#eduDetails {
 	padding: 10px;
 	margin-top: 10px;
 }
 
-#profileStatement p {
-	margin-top: 20px;
-}
+
 
 p,
 li {
@@ -283,9 +277,6 @@ h3 {
 	padding: 0;
 }
 
-.smokeAnim p {
-	font-size: 1.2em;
-}
 
 #eduDetails {
 	height: 80vh;
