--- a/public/phone.css
+++ b/public/phone.css
@@ -186,9 +186,9 @@ h1 {
 	margin-top: 14vh;
 	overflow: auto;
 	display: grid;
-	grid-template-columns: repeat(8, 85vw);
+	grid-template-columns: repeat(9, 85vw);
 	height: 74vh;
-	width: 680vw;
+	width: 765vw;
 	position: relative;
 }
 
@@ -199,7 +199,8 @@ h1 {
 #Comp5,
 #Comp6,
 #Comp7,
-#Comp8 {
+#Comp8,
+#Comp9 {
 	position: relative;
 	border-radius: 20px;
 	z-index: 1;
