MAKING SELF EXPLANATORY VARIABLE NAMES

--- a/public/index.css
+++ b/public/index.css
@@ -17,23 +17,26 @@ main {
 	overflow: hidden;
 }
 
+/* LANDING PAGE IS THE WHOLE BIKE RACE TRACK. BEFORE THE ACTUAL RESUME SCREEN.*/
 #landingPage {
 	position: relative;
 	display: grid;
 	grid-template-rows: minmax(auto, 1fr) minmax(auto, 0.25fr);
 	width: 560vw;
-
 }
 
+/* SCENERY:- TOP PORTION OF THE LANDING PAGE ANYTHING ABOVE THE ROAD */
 #scenery {
 	background-image: url('./images/mainsignboard.jpg');
 	background-position: left top;
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	position: relative;
+	border: 2px solid red;
+
 }
 
-@-webkit-keyframes animEven {
+@-webkit-keyframes bikeSmokeEvenFumes {
 	0% {
 		-webkit-transform: translate(0, 0) scale(1);
 		opacity: 1;
@@ -45,9 +48,9 @@ main {
 		opacity: 0;
 		filter: blur(10px);
 	}
-}
+} 
 
-@keyframes animEven {
+@keyframes bikeSmokeEvenFumes {
 	0% {
 		transform: translate(0, 0) scale(1);
 		opacity: 1;
@@ -59,9 +62,9 @@ main {
 		opacity: 0;
 		filter: blur(10px);
 	}
-}
+} 
 
-@-webkit-keyframes animOdd {
+@-webkit-keyframes bikeSmokeOddFumes {
 	0% {
 		-webkit-transform: translate(0, 0) scale(1);
 		opacity: 1;
@@ -75,7 +78,7 @@ main {
 	}
 }
 
-@keyframes animOdd {
+@keyframes bikeSmokeOddFumes {
 	0% {
 		transform: translate(0, 0) scale(1);
 		opacity: 1;
